--- a/build.gradle
+++ b/build.gradle
@@ -5,15 +5,19 @@ buildscript {
     }
   }
   dependencies {
-    classpath 'ske.aurora.gradle.plugins:aurora-gradle-plugin:1.7.0'
+    classpath "no.skatteetaten.aurora.gradle.plugins:aurora-gradle-plugin:1.1.0"
   }
 }
 
+ext.aurora = [
+    requireStaging: false
+]
+
+apply plugin: 'no.skatteetaten.plugins.aurora'
 apply plugin: 'groovy'
 apply plugin: 'maven'
-apply plugin: 'ske.plugins.aurora'
 
-group = 'ske.aurora.gradle.plugins'
+group = 'no.skatteetaten.aurora.gradle.plugins'
 
 dependencies {
   compile(
@@ -28,6 +32,71 @@ dependencies {
 }
 
 install.dependsOn << build
+
+task javadocJar(type: Jar) {
+  classifier = 'javadoc'
+  from javadoc
+}
+
+task sourcesJar(type: Jar) {
+  classifier = 'sources'
+  from sourceSets.main.allSource
+}
+
+artifacts {
+  archives javadocJar, sourcesJar
+}
+
+signing {
+  required { gradle.taskGraph.hasTask("uploadArchives") }
+  sign configurations.archives
+}
+
+if (ext.has("ossrhUsername") && ext.has("ossrhPassword")) {
+  uploadArchives {
+    repositories {
+      mavenDeployer {
+        beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+        repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+          authentication(userName: ossrhUsername, password: ossrhPassword)
+        }
+
+        snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+          authentication(userName: ossrhUsername, password: ossrhPassword)
+        }
+
+        pom.project {
+          name 'Aurora Gradle Plugin'
+          packaging 'jar'
+          description 'A plugin that will apply a sensible base line for JVM applications developed by the Norwegian Tax Authority'
+          url 'https://github.com/Skatteetaten/aurora-docker-plugin'
+
+          scm {
+            connection 'scm:git:https://github.com/Skatteetaten/aurora-docker-plugin.git'
+            developerConnection 'scm:git:https://github.com/Skatteetaten/aurora-docker-plugin.git'
+            url 'https://github.com/Skatteetaten/aurora-docker-plugin'
+          }
+
+          licenses {
+            license {
+              name 'The Apache License, Version 2.0'
+              url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+            }
+          }
+
+          developers {
+            developer {
+              id 'bjartek'
+              name 'Bjarte S. Karlsen'
+              email 'Bjarte.Karlsen@Skatteetaten.no'
+            }
+          }
+        }
+      }
+    }
+  }
+}
 
 task wrapper(type: Wrapper) {
   gradleVersion = "2.13"
