--- a/src/main/resources/META-INF/gradle-plugins/ske.plugins.aurora-docker.properties
+++ b/src/main/resources/META-INF/gradle-plugins/ske.plugins.aurora-docker.properties
@@ -1,1 +1,1 @@
-implementation-class=ske.aurora.gradle.plugins.docker.AuroraDockerPlugin
+implementation-class=no.skatteetaten.aurora.gradle.plugins.docker.AuroraDockerPlugin
