--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript {
   repositories {
     jcenter()
     mavenCentral()
+    mavenLocal()
   }
   dependencies {
     classpath "no.skatteetaten.aurora.gradle.plugins:aurora-gradle-plugin:1.1.0"
@@ -19,17 +20,18 @@ ext.aurora = [
     requireStaging: false
 ]
 
-apply plugin: 'no.skatteetaten.plugins.aurora'
 apply plugin: 'groovy'
 apply plugin: 'maven'
 apply plugin: 'signing'
+apply plugin: 'no.skatteetaten.plugins.aurora'
+
 
 group = 'no.skatteetaten.aurora.gradle.plugins'
 
 dependencies {
   compile(
       gradleApi(),
-      "org.codehaus.groovy:groovy-all:2.4.4",
+      "org.codehaus.groovy:groovy-all:2.4.7",
       'com.github.zafarkhaja:java-semver:0.9.0',
       'commons-io:commons-io:2.5'
   )
@@ -109,5 +111,5 @@ if (ext.has("ossrhUsername") && ext.has("ossrhPassword")) {
 
 
 task wrapper(type: Wrapper) {
-  gradleVersion = "2.13"
+  gradleVersion = "3.0"
 }
