try to configure the aurora gradle plugin

--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,10 @@ repositories {
 
 
 ext.aurora = [
-    requireStaging: false
+    requireStaging: false,
+    applyNexusRepositores: false,
+    applyDeliveryBundleConfig: false
+
 ]
 
 apply plugin: 'groovy'
