--- a/build.gradle
+++ b/build.gradle
@@ -19,27 +19,20 @@ repositories {
 ext.aurora = [
     requireStaging: false,
     applyNexusRepositores: false,
-    applyDeliveryBundleConfig: false
-
+    applyDeliveryBundleConfig: false,
+    applyAsciiDocPlugin: false
 ]
 
-apply plugin: 'groovy'
-apply plugin: 'maven'
 apply plugin: 'signing'
 apply plugin: 'no.skatteetaten.plugins.aurora'
-
 
 group = 'no.skatteetaten.aurora.gradle.plugins'
 
 dependencies {
   compile(
       gradleApi(),
-      "org.codehaus.groovy:groovy-all:2.4.7",
       'com.github.zafarkhaja:java-semver:0.9.0',
       'commons-io:commons-io:2.5'
-  )
-  testCompile(
-      "org.spockframework:spock-core:1.0-groovy-2.4",
   )
 }
 
