--- a/build.gradle
+++ b/build.gradle
@@ -1,111 +1,45 @@
-buildscript {
-  repositories {
-    jcenter()
-    mavenCentral()
-//    mavenLocal()
-  }
-  dependencies {
-    classpath "no.skatteetaten.aurora.gradle.plugins:aurora-gradle-plugin:1.2.1"
-  }
+plugins {
+  id "groovy"
+  id "com.gradle.plugin-publish" version "0.10.1"
+  id "java-gradle-plugin"
+  id "maven-publish"
 }
 
-repositories {
-  mavenCentral()
-  jcenter()
-  mavenLocal()
-}
+group = groupId
 
+version "${version}"
 
-ext.aurora = [
-    requireStaging: false,
-    applyNexusRepositores: false,
-    applyDeliveryBundleConfig: false,
-    applyAsciiDocPlugin: false,
-    groovyVersion: "2.4.11"
-]
-
-apply plugin: 'signing'
-apply plugin: 'no.skatteetaten.plugins.aurora'
-
-group = 'no.skatteetaten.aurora.gradle.plugins'
-
-dependencies {
-  compile(
-      gradleApi(),
-      'com.github.zafarkhaja:java-semver:0.9.0',
-      'commons-io:commons-io:2.5'
-  )
-}
-
-install.dependsOn << build
-
-
-task javadocJar(type: Jar) {
-  classifier = 'javadoc'
-  from javadoc
-}
-
-task sourcesJar(type: Jar) {
-  classifier = 'sources'
-  from sourceSets.main.allSource
-}
-
-artifacts {
-  archives javadocJar, sourcesJar
-}
-
-signing {
-  required { gradle.taskGraph.hasTask("uploadArchives") }
-  sign configurations.archives
-}
-
-if (ext.has("ossrhUsername") && ext.has("ossrhPassword")) {
-  uploadArchives {
-    repositories {
-      mavenDeployer {
-        beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
-        repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-          authentication(userName: ossrhUsername, password: ossrhPassword)
-        }
-
-        snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-          authentication(userName: ossrhUsername, password: ossrhPassword)
-        }
-
-        pom.project {
-          name 'Aurora Docker Plugin'
-          packaging 'jar'
-          description 'A plugin that is used to build docker image using gradle.'
-          url 'https://github.com/Skatteetaten/aurora-docker-plugin'
-
-          scm {
-            connection 'scm:git:https://github.com/Skatteetaten/aurora-docker-plugin.git'
-            developerConnection 'scm:git:https://github.com/Skatteetaten/aurora-docker-plugin.git'
-            url 'https://github.com/Skatteetaten/aurora-docker-plugin'
-          }
-
-          licenses {
-            license {
-              name 'The Apache License, Version 2.0'
-              url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-            }
-          }
-
-          developers {
-            developer {
-              id 'bjartek'
-              name 'Bjarte S. Karlsen'
-              email 'Bjarte.Karlsen@Skatteetaten.no'
-            }
-          }
-        }
-      }
+gradlePlugin {
+  plugins {
+    auroraPlugin {
+      id = 'no.skatteetaten.gradle.aurora-docker'
+      implementationClass = 'no.skatteetaten.aurora.gradle.plugins.docker.AuroraDockerPlugin'
     }
   }
 }
 
+pluginBundle {
+  website = 'https://github.com/Skatteetaten/aurora-docker-gradle-plugin'
+  vcsUrl = 'https://github.com/Skatteetaten/aurora-docker-gradle-plugin'
+  description = 'Gradle plugin to build and test Docker images'
+  tags = ['skatteetaten', 'corporate']
 
-task wrapper(type: Wrapper) {
-  gradleVersion = "4.1"
+  plugins {
+    auroraPlugin {
+      displayName = 'Skatteetaten Aurora Gradle Docker plugin'
+    }
+  }
+}
+
+repositories {
+    jcenter()
+    mavenCentral()
+}
+
+dependencies {
+    compile(gradleApi())
+    compile('com.github.zafarkhaja:java-semver:0.9.0')
+    compile('commons-io:commons-io:2.5')
+    testCompile group: 'org.spockframework', name: 'spock-core', version: '1.3-groovy-2.5'
+    testCompile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.5.8', ext: 'pom'
 }
