--- a/build.gradle
+++ b/build.gradle
@@ -32,9 +32,9 @@ pluginBundle {
 }
 
 dependencies {
-    compile(gradleApi())
-    compile('com.github.zafarkhaja:java-semver:0.9.0')
-    compile('commons-io:commons-io:2.11.0')
-    testCompile group: 'org.spockframework', name: 'spock-core', version: '1.3-groovy-2.5'
-    testCompile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.5.8', ext: 'pom'
+    implementation(gradleApi())
+    implementation('com.github.zafarkhaja:java-semver:0.9.0')
+    implementation('commons-io:commons-io:2.11.0')
+    testImplementation group: 'org.spockframework', name: 'spock-core', version: '2.0-groovy-3.0'
+    testImplementation group: 'org.codehaus.groovy', name: 'groovy-all', version: '3.0.7', ext: 'pom'
 }
